# jellyfin-downloader

./: .gitignore  README.md  config.example.toml  config.example.yml  jellyfin_downloader.py  pyproject.toml  run.py
app/: downloader.py  exceptions.py  helpers.py  settings.py  utils.py
